<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MigrationActivity">

    <ImageView
        android:layout_width="512dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:alpha="0.5"
        android:src="@mipmap/ic_launcher_foreground"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <EditText
                android:id="@+id/plain_message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:autofillHints="null"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/text_to_encrypt"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                tools:targetApi="o" />

            <Button
                android:id="@+id/encrypt_value_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_encrypt_old_solution"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/value_encryption_info_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/migrate_value_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:enabled="false"
                android:text="@string/button_migrate"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/value_migration_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>