...
    <string name="error_fatal">The key store threw an internal error which means that despite all other criteria match you cannot use the key store on this device.</string>
    <string name="error_encryption">An error has happened when trying to encrypt or decrypt a value.</string>
    <string name="error_library">Blame it all on us! Create an issue on GitHub.</string>

    <string name="clear_all">Clear all</string>
    <string name="info">Info</string>
    <string name="migrate">Migrate</string>
    <string name="button_migrate">Migrate</string>
</resources>

